[package]
name = "ironcladserver"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high performance Rust web server that supports multithreads and async and is used as a playground for testing and improving your hacking skills while learning about AppSec and how to build secure software."
repository = "https://github.com/amonteir/IroncladServer.git"

[dependencies]
futures = "0.3"
async-tls = "0.11.0"
rustls = "0.19.0"
rustls-pemfile = "1.0.3"
once_cell = "1.18.0"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "json" ] }
dotenv = "0.15.0"
rand = "0.8.5"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
